2009-04-02  Esteban Sanchez  <estebans@artica.es>

	* include/functions_reporting.php: Added alert API on
	get_agent_alerts_reporting_table() to solve a notice error.

2009-04-02  Esteban Sanchez  <estebans@artica.es>

	* extras/pandoradb_migrate_v2.x_to_v3.0.sql: Removed id on tconfig
	inserts.

	* godmode/agentes/configurar_agente.php: Min and max module values
	were not being updated.

	* godmode/alerts/configure_alert_template.php: Removed duplicated
	example. Added support for next warning and critical template types.

	* include/functions_ui.php, include/functions_alerts.php: Added new
	alert template types.

	* include/functions_db.php: temp_sql_delete() moved out of
	delete_agent() because there were errors if it was calling more than
	once.

	* include/functions_reports.php: Fixed doc for get_reports().

	* include/config_process.php: Updated build number.

2009-04-02  Esteban Sanchez  <estebans@artica.es>

	* reporting/fgraph.php: Removed id_agente reference on combined
	graphs. Fixes #2724895

2009-04-01  Esteban Sanchez  <estebans@artica.es>

	* godmode/alerts/alert_compounds.php: Fixed group All.

	* godmode/alerts/configure_alert_compound.php: Fixed group All.
	"Compound" labels renamed to "Correlated".

	* include/styles/pandora.css: Removed invisible class, which was
	duplicated from common.css.

	* include/functions_db.php: safe_acl_group() now handles group All.
	Fixes #2725019 and #2723089

2009-04-01  Esteban Sanchez  <estebans@artica.es>

	* pandoradb.sql, extras/pandoradb_migrate_v2.x_to_v3.0.sql: Added
	priority field to talert_templates and removed from
	talert_template_module.

	* godmode/alerts/alert_list.php: Fixed SQL notice when fetching
	groups.

	* godmode/alerts/alert_templates.php: Added priority to the template
	tooltip.

	* godmode/alerts/configure_alert_template.php: Added priority field to
	alert templates.

	* include/functions_db.php: Style correction.

2009-04-01  Jorge Gonzalez  <jorgegonz@artica.es>
