@@ -1,5 +1,13 @@
 2009-04-02  Esteban Sanchez  <estebans@artica.es>
 
+	* include/functions_config.php: Fixed a bug when the theme was not
+	given on update_config().
+
+	* godmode/setup/setup.php: Removed unneccesary include of
+	functions_themes.php
+
+2009-04-02  Esteban Sanchez  <estebans@artica.es>
+
 	* include/functions_reporting.php: Added alert API on
 	get_agent_alerts_reporting_table() to solve a notice error.
 
